# ducky

./: .gitignore  app.py  create_tables.py  db.sqlite  drop_tables.py  main.py  pyproject.toml  requirements.txt  test_engine.py  util.py  utils.py
api/: app.py  bpmn_process_instance_router.py  bpmn_process_router.py  bpmn_task_router.py  bpmn_task_spec_router.py  bpmn_workflow_router.py  bpmn_workflow_spec_router.py  dependencies.py  schemas.py  settings.py
bpmn/: __init__.py  __main__.py  bpmn_runner.py  ducky.bpmn  engine.py  store.py
db/: __init__.py  database.py  models.py  repository.py
db/models/: __init__.py
db/repos/: __init__.py
routers/: __init__.py  bpmn_process_instance_router.py  bpmn_process_router.py
schemas/: __init__.py
