[project]
name = "ducky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.129.0",
    "loguru>=0.7.3",
    "spiffworkflow>=3.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "whistle>=2.1.4",
]
